Fixed the default font. Fixed the visible/hidden classes. Fixed some import issues

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -55,7 +55,7 @@ table {
   clear: both; }
 
 body {
-  font-family: "proxima nova", "Helvetica Neue", "Arial", sans-serif;
+  font-family: "proxima-nova", "Helvetica Neue", "Arial", sans-serif;
   font-size: 16px;
   font-weight: normal;
   line-height: 1.4; }
@@ -71,7 +71,7 @@ pre {
   color: white; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "proxima nova", "Helvetica Neue", "Arial", sans-serif;
+  font-family: "proxima-nova", "Helvetica Neue", "Arial", sans-serif;
   font-weight: 100;
   margin-top: 22.4px;
   margin-bottom: 11.2px; }
